# ansible-role-syncoid

./: .gitignore  LICENSE  pyproject.toml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
tasks/: config_files.yml  cron_files.yml  facts.yml  main.yml  snapshot_pool.yml  ssh.yml
templates/etc/cron/: syncoid.cron.j2
templates/etc/syncoid/: syncoid.conf.j2
templates/etc/syncoid/datasets/: syncoid_dataset.conf.j2
tests/: test.yml
vars/: main.yml
