[tool.poetry]
name = "dejarik-ra-syncoid"
version = "0.1.0"
description = ""
authors = ["Mohamed Tawfik <m_tawfik@aucegypt.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"